[gd_scene load_steps=14 format=2]

[ext_resource path="res://Assets/map/blockL1.png" type="Texture" id=1]
[ext_resource path="res://Assets/paralax1/paralaxE1_2.png" type="Texture" id=2]
[ext_resource path="res://Assets/paralax1/paralaxB1.png" type="Texture" id=3]
[ext_resource path="res://Assets/paralax1/paralaxE1_1.png" type="Texture" id=4]
[ext_resource path="res://Assets/music/levelMusic.ogg" type="AudioStream" id=5]
[ext_resource path="res://Hope.tscn" type="PackedScene" id=6]
[ext_resource path="res://world-1/level1-3.gd" type="Script" id=7]
[ext_resource path="res://enemySpider.tscn" type="PackedScene" id=8]
[ext_resource path="res://enemyScorpio.tscn" type="PackedScene" id=9]
[ext_resource path="res://EnemyGene.tscn" type="PackedScene" id=10]

[sub_resource type="ConvexPolygonShape2D" id=1]
points = PoolVector2Array( 64, 64, 0, 64, 0, 0, 64, 0 )

[sub_resource type="TileSet" id=2]
0/name = "blockL1.png 0"
0/texture = ExtResource( 1 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 64, 64 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape = SubResource( 1 )
0/shape_one_way = false
0/shape_one_way_margin = 1.0
0/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 1 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
0/z_index = 0

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 2647.05, 33.4249 )

[node name="level1-3" type="Node2D"]
pause_mode = 2
position = Vector2( 0, 647.269 )
script = ExtResource( 7 )

[node name="TileMap" type="TileMap" parent="."]
pause_mode = 1
tile_set = SubResource( 2 )
collision_layer = 8
collision_mask = 2147483648
format = 1
tile_data = PoolIntArray( -524284, 0, 0, -524283, 0, 0, -327679, 0, 0, -327678, 0, 0, -327677, 0, 0, -327676, 0, 0, -327675, 0, 0, -327674, 0, 0, -327673, 0, 0, -327672, 0, 0, -327671, 0, 0, -327666, 0, 0, -327665, 0, 0, -327664, 0, 0, -327663, 0, 0, -327658, 0, 0, -327657, 0, 0, -327656, 0, 0, -327655, 0, 0, -327652, 0, 0, -327649, 0, 0, -327646, 0, 0, -327645, 0, 0, -327644, 0, 0, -327643, 0, 0, -327640, 0, 0, -327637, 0, 0, -327634, 0, 0, -327631, 0, 0, -327628, 0, 0, -327625, 0, 0, -327624, 0, 0, -327623, 0, 0, -327622, 0, 0, -262143, 0, 0, -262142, 0, 0, -262141, 0, 0, -262140, 0, 0, -262139, 0, 0, -262138, 0, 0, -262137, 0, 0, -262136, 0, 0, -262135, 0, 0, -262130, 0, 0, -262129, 0, 0, -262128, 0, 0, -262127, 0, 0, -262122, 0, 0, -262121, 0, 0, -262120, 0, 0, -262119, 0, 0, -262110, 0, 0, -262109, 0, 0, -262108, 0, 0, -262107, 0, 0, -262089, 0, 0, -262088, 0, 0, -262087, 0, 0, -262086, 0, 0 )

[node name="Hope" parent="." instance=ExtResource( 6 )]
pause_mode = 1
position = Vector2( 319.751, -570.27 )

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]
pause_mode = 1

[node name="sky" type="ParallaxLayer" parent="ParallaxBackground"]
motion_mirroring = Vector2( 1000, 1000 )

[node name="Sprite" type="Sprite" parent="ParallaxBackground/sky"]
scale = Vector2( 2, 2 )
texture = ExtResource( 3 )
centered = false

[node name="cloud" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2( 0.5, 0.5 )
motion_mirroring = Vector2( 1000, 1000 )

[node name="Sprite" type="Sprite" parent="ParallaxBackground/cloud"]
scale = Vector2( 2, 2 )
texture = ExtResource( 4 )
centered = false

[node name="cloud2" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2( 1.3, 1.1 )
motion_mirroring = Vector2( 1000, 1000 )

[node name="Sprite" type="Sprite" parent="ParallaxBackground/cloud2"]
scale = Vector2( 2, 2 )
texture = ExtResource( 2 )
centered = false

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
pause_mode = 1
stream = ExtResource( 5 )
volume_db = -5.0
autoplay = true

[node name="Fallzone" type="Area2D" parent="."]
pause_mode = 1
collision_layer = 0
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="Fallzone"]
position = Vector2( 1955.14, 578.275 )
shape = SubResource( 3 )

[node name="enemys" type="Node2D" parent="."]
pause_mode = 1

[node name="enemySpider" parent="enemys" instance=ExtResource( 8 )]
position = Vector2( 552.712, -365.414 )

[node name="enemySpider2" parent="enemys" instance=ExtResource( 8 )]
position = Vector2( 156.721, -365.504 )

[node name="enemySpider3" parent="enemys" instance=ExtResource( 8 )]
position = Vector2( 3644.08, -386.787 )

[node name="EnemyGene" parent="enemys" instance=ExtResource( 10 )]
position = Vector2( 1029.55, -384.666 )

[node name="EnemyGene2" parent="enemys" instance=ExtResource( 10 )]
position = Vector2( 1524.52, -370.524 )

[node name="enemyScorpio" parent="enemys" instance=ExtResource( 9 )]
position = Vector2( 2282.54, -373.352 )

[node name="timerNext" type="Timer" parent="."]
pause_mode = 1
wait_time = 1.3

[connection signal="body_entered" from="Fallzone" to="." method="_on_Fallzone_body_entered"]
[connection signal="enemy_destroy" from="enemys/enemySpider" to="." method="_on_Enemy_enemy_destroy"]
[connection signal="enemy_destroy" from="enemys/enemySpider2" to="." method="_on_Enemy_enemy_destroy"]
[connection signal="enemy_destroy" from="enemys/enemySpider3" to="." method="_on_Enemy_enemy_destroy"]
[connection signal="enemy_destroy" from="enemys/EnemyGene" to="." method="_on_Enemy_enemy_destroy"]
[connection signal="enemy_destroy" from="enemys/EnemyGene2" to="." method="_on_Enemy_enemy_destroy"]
[connection signal="enemy_destroy" from="enemys/enemyScorpio" to="." method="_on_Enemy_enemy_destroy"]
[connection signal="timeout" from="timerNext" to="." method="_on_timerNext_timeout"]
